# dephell_discover

./: .gitignore  .travis.yml  README.md  appveyor.yml  pyproject.toml  tox.ini
dephell_discover/: __init__.py  _constants.py  _data.py  _line.py  _metainfo.py  _package.py  _relative.py  _root.py  root.py
dephell_package/: __init__.py  package.py
tests/: test_metainfo.py  test_package.py  test_root.py
