[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.dephell.flake8]
from = {format = "pip", path = "requirements-flake.txt"}
python = ">=3.6"
command = "flake8"

[tool.dephell.pytest]
from = {format = "poetry", path = "pyproject.toml"}
tests = ["tests", "README.md"]
command = "pytest tests/"

[tool.dephell.typing]
from = {format = "poetry", path = "pyproject.toml"}
command = "mypy --ignore-missing-imports --allow-redefinition dephell_discover"


[tool.poetry]
name = "dephell_discover"
version = "0.1.2"
description = "Find project modules and data files (packages and package_data for setup.py)."
authors = ["Gram <master_fess@mail.ru>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/dephell/dephell_discover"
keywords = ["dephell", "packaging", "dependency", "dependencies", "setuptools", "packages", "finder"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Setuptools Plugin",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.5"
attr = "*"
